examples/invalid/syntaxErr/basic/beginNoend.wacc
# begin missing closing end
# Output:
# #syntax error#

#Program:#

begin skip
